--- a/templates/editEvent.html
+++ b/templates/editEvent.html
@@ -62,16 +62,6 @@
           <button type="button" onclick="window.location='/'">Home</button>
       </header>
 
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <ul class=flashes>
-            {% for message in messages %}
-              <li>{{ message }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      {% endwith %}
-
       <form action="/editEvent" method="post">
           <label>Sport:</label>
           <select name="sport">
@@ -84,7 +74,13 @@
           <label>People needed:</label>         <input id="needed" type="number"        name="people_needed" class="req" required><br>
           <label>Date:</label>                  <input id="date" type="date"            name="date"><br>
           <label>Time:</label>                  <input type="time"                      name="time" ><br>
-          <label>Location:</label>              <input type="text"                      name="location" class="req" required><br>
+          <label>Location:</label><br>
+          <select name="location">
+            <option value="mladost"  >zh.k. Mladost I</option>
+            <option value="sportna_sofia">Sportna Sofia</option>
+            <option value="balonite">Balonite</option>
+            <option value="center"    >Sporten Centyr "Crystal"</option>
+          </select><br>
           <label>Price per person:</label>      <input id="price" type="number"         name="price" class="req" required><br>
           <label>Short description:</label>     <input type="text"                      name="description"><br><br>
           <input id="submit_btn" type="submit" value="Submit">
