Added the 'lost' tests.

--- a/templates/home.html
+++ b/templates/home.html
@@ -197,8 +197,8 @@
             <li><a href="/login" id="login_link"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
             <li><a href="/register" id="registration_link"><span class="glyphicon glyphicon-pencil"></span> Register</a></li>
           {% else %}
-            <li><a href="/newEvent"><span class="glyphicon glyphicon-plus"></span> Create an Event</a></li>
-            <li><a href="/myProfile"><span class="glyphicon glyphicon-user"></span> My Profile</a></li>
+            <li><a href="/newEvent" id="newEvent"><span class="glyphicon glyphicon-plus"></span> Create an Event</a></li>
+            <li><a href="/myProfile" id="myProfile"><span class="glyphicon glyphicon-user"></span> My Profile</a></li>
             <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
           {% endif %}
         {% endblock content %}
