--- a/templates/login.html
+++ b/templates/login.html
@@ -27,14 +27,14 @@
 			<div class="group">
 			<label>Username</label>
 			</br>
-			<input name = "user" type = "text"/><br>
+			<input name = "user" id = "username" type = "text"/><br>
 			</div>
 			<div class="group">
 			<label>Password</label>
 			</br>
-			<input name = "pwd" type = "password"/><br>
+			<input name = "pwd" id = "pwd" type = "password"/><br>
 			</div>
-			<input type = "submit" id = login_button name = "login_button" value = "Log in">
+			<input type = "submit" id = "login_button" name = "login_button" value = "Log in">
 		</form>
 		</div>
 	</body>
