--- a/templates/newEvent.html
+++ b/templates/newEvent.html
@@ -49,7 +49,7 @@
           <div class="group">
             <label>Date & Time:</label><br>
             <input id="date" type="date" name="date">
-            <input type="time" name="time" ><br>
+            <input type="time" name="time" id="time" ><br>
           </div>
           <div class="group">
             <label>Price per person:</label><br>
