--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -74,7 +74,7 @@
                     type: "PUT",
                     async: false
                   });
-                  alert("YOU SUCCESSFULLY JOINED " + allEvents[i].created_by + "'s " + allEvents[i].sport + " EVENT!");
+                  alert("YOU SUCCESSFULLY REQUESTED TO JOIN " + allEvents[i].created_by + "'s " + allEvents[i].sport + " EVENT!");
                   location.reload();
                 }
 
